# pnpm_uv

./: .gitignore  README.md  pnpm-lock.yaml
backend/: auth.py  database.db  database.py  init_admin.py  init_db.py  main.py  models.py  pyproject.toml
frontend/: package.json
frontend/app/: main.tsx
frontend/app/components/ui/: dialog.tsx
